# data_cleaning_api_service

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
data_example/: Titanic_sample.json
passenger/: api.py  schemas.py  services.py  utils.py
passenger/tests/: passenger_test.py
