[project]
name = "datacleaningapiservice"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "redoc>=0.2.3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
